# code_statistics

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  README.md  conanfile.py
cpp/: .gitignore  CMakeLists.txt  README.md  conanfile.py
cpp/src/conf/: CMakeLists.txt
cpp/src/conf/include/conf/: conf.hpp
cpp/src/conf/src/: conf.cpp
cpp/src/conf/test/: test_conf.cpp
cpp/src/driver/: CMakeLists.txt
cpp/src/driver/include/driver/: driver.hpp
cpp/src/driver/src/: driver.cpp
cpp/src/driver/test/: test_driver.cpp
cpp/src/main/: CMakeLists.txt  main.cpp
cpp/src/stats/: CMakeLists.txt
cpp/src/stats/include/stats/: code_analyzer.hpp  cpp_analyzer.hpp  rust_analyzer.hpp
cpp/src/stats/src/: analysis_result.cpp  code_analyzer.cpp  cpp_analyzer.cpp  rust_analyzer.cpp
cpp/src/stats/test/: test_stats.cpp
src/: CMakeLists.txt  analysis_result.cpp  analyzer.rs  code_analysis.cpp  code_analysis.h  conf.rs  configuration.cpp  configuration.h  driver.rs  global_code_analysis.h  lib.rs  main.rs  run.cpp
src/analyzer/: c_analyzer.rs  cpp_analyzer.rs
src/conf/: CMakeLists.txt
src/conf/include/conf/: conf.hpp
src/conf/src/: conf.cpp
src/conf/test/: test_conf.cpp
src/driver/: CMakeLists.txt
src/driver/include/driver/: driver.hpp
src/driver/src/: driver.cpp
src/driver/test/: test_driver.cpp
src/main/: main.cpp
src/stats/: CMakeLists.txt
src/stats/include/stats/: all_analyzer.hpp  analysis_result.hpp  code_analysis.hpp  code_analyzer.hpp  cpp_analyzer.hpp  python_analyzer.hpp  rust_analyzer.hpp  ts_analyzer.hpp
src/stats/src/: all_analyzer.cpp  analysis_result.cpp  code_analysis.cpp  code_analyzer.cpp  cpp_analyzer.cpp  python_analyzer.cpp  ts_analyzer.cpp
src/stats/test/: test_stats.cpp
src/stats/test/goldens/: file_process.py  file_process.txt  lispy.txt  stance_predict.py  stance_predict.txt  string.txt
